# agent-symbolic-guardrails

./: .gitignore  .gitmodules  README.md
experiments/agent/: pyproject.toml
experiments/agent/src/: agent.py  cli.py  files.py  mcp_client.py  user.py
experiments/agent/src/config/: loader.py  logger.py
experiments/agent/src/config/configs/CarBench/: baseline_config.yml  (+6 more)
experiments/agent/src/domains/: __init__.py  task_base.py
experiments/agent/src/domains/CarBench/: eval.py  policy_evaluator.py  prompts.py  task.py  wiki.py
experiments/agent/src/domains/MedAgentBench/: prompts.py  utils.py
experiments/agent/src/domains/tau2/: prompts.py  task.py
experiments/mcp-server/: pyproject.toml
experiments/mcp-server/src/: config_loader.py  server.py
experiments/mcp-server/src/configs/CarBench/: baseline_config_base.yml  baseline_config_base_test.yml  baseline_config_base_train.yml  config.yml  guardrail_config_base.yml  guardrail_config_base_test.yml  guardrail_config_base_train.yml
experiments/mcp-server/src/configs/MedAgentBench/: ori_full_config.yml  ori_golden_config.yml  ori_raw_config.yml  ori_test_config.yml  restart_docker.yml  safety_full_config.yml  safety_golden_config.yml  safety_test_config.yml
experiments/mcp-server/src/configs/tau2/: full_config.yml  golden_config.yml  test_config.yml
experiments/mcp-server/src/dataset_domains/CarBench/: __init__.py  policy_evaluator.py
experiments/mcp-server/src/dataset_domains/MedAgentBench/: data_model.py  docker_service.py  tools.py
experiments/mcp-server/src/dataset_domains/tau2/: safety_check.py
(+268 files in other folders)
