[project]
name = "local-agent"
version = "0.1.0"
description = "Local ReAct agent"
requires-python = ">=3.10"
dependencies = ["openai", "mcp", "litellm"]


[project.scripts]
human_interaction = "cli:human_interaction"
run_random_task = "cli:run_random_task"
run_dataset = "cli:run_dataset"
run_given_task = "cli:run_given_task"
